# Onyx-External-ESP

./: .gitignore  CMakeLists.txt  README.md  build.bat  push.bat
include/onyx/core/: esp_manager.hpp  settings.hpp
include/onyx/render/: renderer.hpp
include/onyx/sdk/: Offsets.hpp
include/onyx/sdk/engine/: Camera.hpp  Component.hpp  GameObject.hpp  Object.hpp  Transform.hpp
include/onyx/sdk/engine/structures/: Il2CppArray.hpp  Il2CppDictionary.hpp  Il2CppTypes.hpp  Matrix4x4.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/onyx/sdk/game/: CameraSystem.hpp  Character.hpp  GameSystem.hpp  GameplayModule.hpp  LocalPlayer.hpp  Skeleton.hpp
include/onyx/utils/: Memory.hpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  esp_manager.cpp
src/render/: CMakeLists.txt  renderer.cpp
src/utils/: CMakeLists.txt
